Fix z-index

--- a/source/assets/stylesheets/_elements.page.scss
+++ b/source/assets/stylesheets/_elements.page.scss
@@ -36,7 +36,7 @@ h1.entry-title {
     bottom: 0;
     left: -1000px;
     right: -1000px;
-    z-index: 0;
+    z-index: -1;
 
     background-color: inherit;
 
